Unified: Fix tab focus of notification controls.

Tab focusing to notification control buttons was broken in
UnifiedSystemTray because UnifiedMessageCenterView did not implement the
same OnDidChangeFocus logic as MesageCenterView did.

TEST=manual
BUG=862506

Change-Id: Ide2d9e170ecefcc87db2d43b6d8d3b1042492374
Reviewed-on: https://chromium-review.googlesource.com/1132907
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575940}
Former-commit-id: 0e9331a295cef18b775c6cff6e14901075b0ed2a