ash/system/unified/unified_system_tray_view.cc
@@ -175,6 +175,10 @@ UnifiedSystemTrayView::UnifiedSystemTrayView(
 
 UnifiedSystemTrayView::~UnifiedSystemTrayView() = default;
 
+void UnifiedSystemTrayView::Init() {
+  message_center_view_->Init();
+}
+
 void UnifiedSystemTrayView::SetMaxHeight(int max_height) {
   message_center_view_->SetMaxHeight(max_height);
 }
